<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.SettingsFragment">

    <LinearLayout
        android:id="@+id/custom_actionbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="#550000"
        android:elevation="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:outlineAmbientShadowColor="@color/black"
        android:padding="3dp"
        android:weightSum="6"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="p">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/back_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView

            android:id="@+id/title_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:text="@string/sozlamalar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/matn_olchami"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <com.google.android.material.slider.Slider

            android:id="@+id/slider"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="5"
            android:value="18.0"
            android:valueFrom="12.0"
            android:valueTo="30.0" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/_25"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/simple_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:elevation="15dp"
        android:padding="10dp"
        app:cardCornerRadius="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/simple_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/name_writer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/muallif"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/color_indicator_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/dastur_ko_rinishini_tanlang"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <com.mikhaellopez.circleview.CircleView
            android:id="@+id/circle_view"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cv_color="#550000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mikhaellopez.circleview.CircleView
            android:id="@+id/circle_view2"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:cv_color="#F2FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/circle_view"
            app:layout_constraintLeft_toLeftOf="@+id/circle_view"
            app:layout_constraintRight_toRightOf="@+id/circle_view"
            app:layout_constraintTop_toTopOf="@+id/circle_view" />


        <ImageView
            android:id="@+id/color_picker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/colorpicker"
            app:layout_constraintBottom_toBottomOf="@+id/circle_view"
            app:layout_constraintLeft_toLeftOf="@+id/circle_view"
            app:layout_constraintRight_toRightOf="@+id/circle_view"
            app:layout_constraintTop_toTopOf="@+id/circle_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/matn_tilini_tanlang" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:weightSum="2">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/uzbekcha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="O'zbekcha"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/krill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Криллча"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

    </LinearLayout>
</LinearLayout>